todas as alterações

--- a/contato.html
+++ b/contato.html
@@ -35,10 +35,21 @@
         <div class="frase">
         <span class="tela-agendar-meio-frase">Entre em contato conosco através de nossas redes sociais!</span>
       </div>
-        <a  class="face"  href=" https://www.facebook.com/kassio.wemerson"><img src="C:\xampp\htdocs\venus-main\img\fb.png" alt=""></a>
 
-        <a class="insta" href="https://www.instagram.com/kaweol"></a>
-        <a class="zap" href="https://chat.whatsapp.com/Do3ZR4vW9OP1keuMwl9dR4"></a>
+        <a  class="face" href=" https://www.facebook.com/kassio.wemerson">
+
+          <img class="face" src="img/fb.png" alt="">
+
+        </a>
+
+        <a class="insta" href="https://www.instagram.com/kaweol">
+
+        <img src="img/ig.png" alt="">
+        </a>
+
+        <a class="zap" href="https://chat.whatsapp.com/Do3ZR4vW9OP1keuMwl9dR4">
+          <img src="img/zap1.png" alt="">
+        </a>
 
       </div>
 
